[package]
name = "wasm-plot"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2"
plotters = "^0.3.2"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = [
	"HtmlCanvasElement",
	'Document',
	'Element',
	'Window',
] }
plotters-canvas = "^0.3.0"

[profile.release]
lto = true
